[package]
name = "muni-schedule-rs"
version = "0.1.0"
authors = ["Bo Stendal Sorensen <bo@stendal-sorensen.net>"]

[dependencies]
conrod_derive = "0.1.2"
image = "0.19.0"
reqwest = "0.9.4"
rusttype = { version = "0.5.0", features = ["gpu_cache"] }
glium = { version = "0.22" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4.8"
app_dirs = "1.2.1"

[dependencies.conrod]
version = "0.61.1"
default-features = false
features = ["winit", "glium"]
